<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stand Generator</string>
    <string name="action_settings">Settings</string>
    <string name="reroll">Generate</string>
    <string name="stand_name">Stand Name: </string>
    <string name="stand_power">Stand Ability: </string>
    <string name="stats">Power - \nSpeed - \nRange - \nDurability - \nPrecision - \nPotential - </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="standproud">Stand Proud!</string>
    <string name="wryy">WRYYYYY!!!!!</string>
    <string name="songhint">Artist/Album</string>
    <string name="cancel">Cancel</string>
    <string name="login_checkbox">Save Login?</string>

</resources>
