<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/backgroundjotaro"
    tools:context=".MyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <EditText
            android:id="@+id/editText1"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:hint="@string/songhint"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/genButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onNameClick"
            android:visibility="gone"
            android:text="@string/reroll"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:text="@string/stand_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:text="@string/stand_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/textView3"
        android:text="@string/stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/loadingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >



        <Button
            android:id="@+id/redditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/signin"
            android:onClick="onRedditClick"
            android:drawableLeft="@drawable/spreddit3"
            android:drawablePadding="5dp"
            style="?android:attr/borderlessButtonStyle" />

        <TextView
            android:id="@+id/urlText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>


        <Button
            android:id="@+id/postButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/standproud"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="onPostClick"
            style="?android:attr/borderlessButtonStyle" />
        
        </RelativeLayout>


</LinearLayout>